2001-05-01  Darin Adler  <darin@eazel.com>

	* configure.in:
	Fixed places that referred to Nautilus instead of librsvg.

2001-04-30  Ramiro Estrugo  <ramiro@eazel.com>

	* autogen.sh:
	Fix a typo in the module name.
	
2001-04-11  Darin Adler  <darin@eazel.com>

	* rsvg.c: (rsvg_affine_expansion), (rsvg_render_bpath): Work
	around bug in art_affine_expansion, which doesn't handle negative
	numbers very well. This fixes a bug where librsvg would hang on
	certain svg files.

2001-04-08  Fatih Demir <kabalak@gtranslator.org>

	* .cvsignore: Extended ignores to be right.

2001-04-04  Ramiro Estrugo  <ramiro@eazel.com>

	* rsvg.c:
	* rsvg.h:
	Include dependency modules to make this header more self
	contained.  In this case gdk-pixbuf and stdio.
	
2001-04-03  Darin Adler  <darin@eazel.com>

	* Makefile.am: Change order of libraries in LDADD
	as a workaround to problem where it finds the wrong
	version of libxml.

2001-04-03  Ramiro Estrugo  <ramiro@eazel.com>

	* .cvsignore:
	Ignore generated files.
	
2001-04-03  Ramiro Estrugo  <ramiro@eazel.com>

	* COPYING.LIB:
	* Makefile.am:
	Add to make rpm happy.

	* configure.in:
	Bump gtk down to 1.2.9.
	
	* librsvg.spec.in:
	Fix undefined requires.
	
2001-04-02  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	Add -lrsvg to LIBS.
	
	* librsvg.spec.in:
	Fix the library name, "librsvg" not "rsvg."
	
2001-04-02  Ramiro Estrugo  <ramiro@eazel.com>

	* .cvsignore:
	* Makefile.am:
	* configure.in:
	* librsvg.spec.in:
	First try at a spec file.
	
2001-03-28  Ramiro Estrugo  <ramiro@eazel.com>

	Started ChangeLog