@@ -5,8 +5,11 @@ LIBART_REQUIRED=2.2.0
 GLIB_REQUIRED=1.2.9
 GTK_REQUIRED=1.2.9
 FREETYPE_REQUIRED=2.0.1
+FREETYPE_LIBRARY_REQUIRED=6.1.0
 GDK_PIXBUF_REQUIRED=0.10.0
 POPT_REQUIRED=1.5
+
+dnl ====================================
 
 AM_CONFIG_HEADER(config.h)
 
@@ -40,67 +43,6 @@ AC_SUBST(GLIB_REQUIRED)
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(FREETYPE_REQUIRED)
 AC_SUBST(POPT_REQUIRED)
-
-dnl ===========================================================================
-
-dnl EAZEL_VERSION_CANON(version)
-dnl                     1
-
-AC_DEFUN(EAZEL_VERSION_CANON, [`
-
-	dnl Assumes that there are no more than 999 revisions at a level,
-	dnl no more than three levels of revision.
-	dnl
-	dnl Any more than that, and test starts messing up the numeric
-	dnl comparisons because its integers overflow, and there's no
-	dnl way to do string comparisons in the shell.  Grr.
-	dnl
-	dnl Must come up with some way to fix this.
-
-	echo "$1" |
-	tr . '\012' |
-	sed -e 's/^/000/' -e 's/^.*\(...\)/\1/' |
-	tr -d '\012' |
-	sed 's/$/000000000/
-	     s/^\(.........\).*/\1/'
-`])
-
-dnl EAZEL_VERSION_INSIST(package, get-version-cmd, operator, want-version-var)
-dnl                      1        2                3         4
-
-AC_DEFUN(EAZEL_VERSION_INSIST, [
-	ez_want_version=[$]$4
-
-	case "$3" in
-		">")	ez_operator=-gt ;;
-		">=")	ez_operator=-ge ;;
-		"<")	ez_operator=-lt ;;
-		"<=")	ez_operator=-le ;;
-		"=")	ez_operator=-eq ;;
-		"!=")	ez_operator=-ne ;;
-		*)	AC_ERROR(Unknown operator $3 in configure script) ;;
-	esac
-
-	AC_MSG_CHECKING(for $1 $3 [$ez_want_version])
-
-	if ez_installed_version="`$2`"
-	then
-		AC_MSG_RESULT([$ez_installed_version])
-	else
-		AC_ERROR($2 failed)
-	fi
-
-	if test "EAZEL_VERSION_CANON([$ez_installed_version])" "$ez_operator" \
-		"EAZEL_VERSION_CANON([$ez_want_version])"
-	then
-		:
-		AC_SUBST($4)
-	else
-		AC_ERROR($1 version [$ez_want_version] is required.)
-	fi
-])
-
-dnl ===========================================================================
 
 dnl ====================================
 dnl = Begin tests for popt
@@ -207,69 +149,15 @@ dnl ====================================
 dnl = end gdk-pixbuf checks
 dnl ====================================
 
-dnl ====================================
-dnl = Begin tests for FreeType2
-dnl ====================================
-FREETYPE2_CFLAGS=
-FREETYPE2_LIBS=
-
-_found_freetype2_lib="no"
-_found_freetype2_header="no"
-_found_freetype2="no"
-
-AC_ARG_WITH(freetype2-libraries, 
-[  --with-freetype2-libraries=PATH		freetype2 library path],
-freetype2_lib_prefix=$withval)
-
-AC_ARG_WITH(freetype2-includes, 
-[  --with-freetype2-includes=PATH	freetype2 include path],
-freetype2_include_prefix=$withval)
-
-AC_ARG_WITH(freetype2-prefix,
-[  --with-freetype2-prefix=PATH		freetype2 installation prefix],
-freetype2_prefix=$withval, freetype2_prefix="/usr")
-
-if test -z "$freetype2_include_prefix"; then
-	freetype2_include_prefix="${freetype2_prefix}/include/freetype2"
-fi
-if test -z "$freetype2_lib_prefix"; then
-	freetype2_lib_prefix="${freetype2_prefix}/lib"
-fi
-
-_save_cpp="$CPP"
-_save_ldflags="$LDFLAGS"
-CPP="$_save_cpp -I$freetype2_include_prefix"
-LDFLAGS="$_save_ldflags -L$freetype2_lib_prefix"
-AC_CHECK_HEADER(freetype/freetype.h, _found_freetype2_header="yes")
-AC_CHECK_LIB(freetype, FT_Init_FreeType, [_found_freetype2_lib="yes"])
-CPP="$_save_cpp"
-LDFLAGS="$_save_ldflags"
-
-if test "x$_found_freetype2_lib" = "xyes" -a \
-	"x$_found_freetype2_header" = "xyes"
-then
-  _found_freetype2="yes"
-fi
-
-if test "x$_found_freetype2" != "xyes" 
-then
+dnl =======================
+dnl = begin tests for FreeType2
+dnl =======================
+NAUTILUS_PATH_FREETYPE2($FREETYPE_LIBRARY_REQUIRED,,
 AC_MSG_ERROR([
-*** FreeType2 is required. You can obtain a packaged version of FreeType2
-*** over here: http://developer.eazel.com/eazel-hacking/updates/freetype2
-*** source versions are available from ftp://ftp.freetype.org])
-fi
-
-if test -n "$freetype2_prefix"; then
-  FREETYPE_CONFIG="$freetype2_prefix/bin/freetype-config"
-else
-  FREETYPE_CONFIG="freetype-config"
-fi
-
-dnl check for the necessary library version
-EAZEL_VERSION_INSIST(freetype library, $FREETYPE_CONFIG --version | tr : ., >=, FREETYPE_LIBRARY_REQUIRED)
-
-FREETYPE2_CFLAGS="-I$freetype2_include_prefix"
-FREETYPE2_LIBS="-L$freetype2_lib_prefix -lfreetype"
+*** FreeType2 $FREETYPE_REQUIRED or better is required. You can obtain a
+*** packaged version of FreeType2 over here:
+*** http://developer.eazel.com/eazel-hacking/updates/freetype2
+*** source versions are available from ftp://ftp.freetype.org]))
 
 AC_SUBST(FREETYPE2_CFLAGS)
 AC_SUBST(FREETYPE2_LIBS)
