@@ -1,3 +1,11 @@
+2001-05-01  Ramiro Estrugo  <ramiro@eazel.com>
+
+	* autogen.sh:
+	* configure.in:
+	Simplify the freetype2 detection insanity by using autoconf macro
+	technology.  The new test should work with both FreeType2 RPMS as
+	well as freetype built from source in any prefix.
+	
 2001-05-01  Darin Adler  <darin@eazel.com>
 
 	* configure.in:
